Layout bug fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,7 +56,7 @@ body:not([data-scroll='0']) .navbar-nav > li > a {
 	transition: 3s;
 }
 
-body:not([data-scroll='0']) .img-responsive {
+body:not([data-scroll='0']) .cover-header .img-responsive {
 	height: 0px;
 	width: auto;
 }
